<resources>
    <string name="app_name">Tu Música</string>
    <string name="descIconoAjustes"><![CDATA[Icono de ajustes. Hecho por: https://www.flaticon.com/free-icon/settings_2099058?term=settings&page=1&position=4&page=1&position=4&related_id=2099058&origin=search]]></string>
    <string name="descIconoBuscar"><![CDATA[Icono de búsqueda, hecho por: https://www.flaticon.com/free-icon/loupe_709592?term=search&page=1&position=5&page=1&position=5&related_id=709592&origin=search]]></string>
    <string name="descIconoPlaylist">Icono de playlist</string>
    <string name="listas_de_reproduccion">Listas de reproducción</string>
    <string name="favoritos">Favoritos</string>
    <string name="carpetas">Carpetas</string>
    <string name="descIconoCola"><![CDATA[Icono de la cola, hecho por: https://www.flaticon.com/free-icon/list-text_507205?term=list&page=1&position=14&page=1&position=14&related_id=507205&origin=search]]></string>
    <string name="descIconoCancionSiguiente">Icono de siguiente canción, hecho por: https://www.flaticon.com/free-icon/play-and-pause-button_64595</string>
    <string name="descIconoPlayPauseFragment"><![CDATA[Icono de play, hecho por: https://www.flaticon.com/free-icon/play-and-pause-button_64595 Icono de pausa, hecho por: https://www.flaticon.com/free-icon/pause_37505?term=pause&page=1&position=31&page=1&position=31&related_id=37505&origin=search]]></string>
    <string name="descIconoCancionAnteriorFragment">Icono de siguiente canción fragment invertido</string>
    <string name="album_desconocido">Álbum desconocido</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="descIconoCarpeta"><![CDATA[Icono de carpeta, hecho por: https://www.flaticon.com/free-icon/folder_992667?term=folder&related_id=992667]]></string>
    <string name="descIconoOcultar"><![CDATA[Icono de ocultar, hecho por: https://www.flaticon.com/free-icon/visibility_633655?term=hide&page=1&position=2&page=1&position=2&related_id=633655&origin=search]]></string>
    <string name="separadorVertical">|</string>
    <string name="descIconoFlechaIzquierda"><![CDATA[Icono de volver que apunta hacia la derecha, hecho por: https://www.flaticon.com/free-icon/left-arrow_860790?term=left%20arrow&page=1&position=7&page=1&position=7&related_id=860790&origin=style]]></string>
    <string name="ajustes">Ajustes</string>
    <string name="filtrarArchivos">FILTRAR ARCHIVOS</string>
    <string name="porTamano">Por tamaño</string>
    <string name="ocultarArchivosPorTamano">Ocultar archivos por tamaño</string>
    <string name="ocultarArchivosMenoresA">"Ocultar archivos menores a "</string>
    <string name="minFiltroTamano">0KB</string>
    <string name="maxFiltroTamano">2MB</string>
    <string name="porDuracion">Por duración</string>
    <string name="ocultarArchivosPorDuracion">Ocultar archivos según su duración</string>
    <string name="ocultarArchivosQueDurenMenosDe">"Ocultar archivos que duren menos de "</string>
    <string name="minFiltroDuracion">0 seg</string>
    <string name="maxFiltroDuracion">5 min</string>
    <string name="porCarpeta">Por carpeta</string>
    <string name="eligeQueCarpetasMostrar">Elige que carpetas mostrar</string>
    <string name="descIconoFlechaDerecha">Icono de flecha Izquierda invertido</string>
    <string name="ajustesAdicionales">AJUSTES ADICIONALES</string>
    <string name="modoOscuro">Modo oscuro</string>
    <string name="acercaDe">ACERCA DE</string>
    <string name="version">Versión</string>
    <string name="versionActual">Verión 0.1</string>
    <string name="desarrolladoPor">Desarrollado por</string>
    <string name="autor">Ricardo Bordería Pi</string>
    <string name="canciones">canciones</string>
    <string name="unaCancion">1 canción</string>
    <string name="descIconoAceptar"><![CDATA[Icono de aceptar, hecho por: https://www.flaticon.com/free-icon/checkmark_1828717?term=correct%20tick%20mark&page=1&position=11&page=1&position=11&related_id=1828717&origin=search]]></string>
    <string name="restablecerAjustes">Restablecer ajustes</string>
    <string name="subtituloRestablecer">Restablecer los ajustes a los valores por defecto</string>
    <string name="mensajeDialogRestablecerAjustes">¿Desea restablecer los ajustes a sus valores de fábrica?</string>
    <string name="ok">OK</string>
    <string name="cancelar">Cancelar</string>
    <string name="descIconoMenuPuntos">Icono de menú de puntos</string>
    <string name="utilizarNombreDelArchivo">Utilizar nombre del archivo</string>
    <string name="subtituloUtilizarNombre">Utilizar el nombre del archivo como título de la canción</string>
    <string name="descIconoFavoritos"><![CDATA[Icono de favoritos lleno, derivado de: https://www.flaticon.com/free-icon/star_1828970?term=favorite&page=1&position=8&page=1&position=8&related_id=1828970&origin=style]]></string>
    <string name="noHayFavoritos">No hay Favoritos</string>
    <string name="descImagenPlaylist">Imagen por defecto de las playlist</string>
    <string name="descIconoCrearPlaylist"><![CDATA[Icono de añadir de color azul, hecho por: https://www.flaticon.com/free-icon/add_875068?term=add&page=1&position=23&page=1&position=23&related_id=875068&origin=search]]></string>
    <string name="playlist">Playlists</string>
    <string name="nombreDeLaPlaylist">Nombre de la playlist</string>
    <string name="noHayPlaylists">No hay playlists</string>
    <string name="eliminarPlaylist">Eliminar playlist</string>
    <string name="descIconoEliminar"><![CDATA[Icono de eliminar, hecho por: https://www.flaticon.com/free-icon/delete_833262?term=delete&page=1&position=43&page=1&position=43&related_id=833262&origin=search]]></string>
    <string name="anadirCanciones">Añadir canciones</string>
    <string name="reproduccionAleatoria">Reproducción aleatoria</string>
    <string name="reproduccionLinear">Reproducción lineal</string>
    <string name="eliminarCanciones">Eliminar canciones</string>
    <string name="elementoImagenPlaylist">imagenPlaylist</string>
    <string name="elementoNombrePlaylist">nombrePlaylist</string>
    <string name="elementoNumCancionesPlaylist">numCancionesPlaylist</string>
    <string name="introduceNombrePlaylist">Introduce un nombre para la playlist</string>
    <string name="mantenParaCambiarImagen">Mantén pulsado para cambiar la imagen de la playlist</string>
    <string name="mantenerParaCambiarNombre">Mantén pulsado para cambiar el nombre de la playlist</string>
    <string name="anadirALaPlaylist">Añadir a la playlist</string>
    <string name="anadirALaCola">Añadir a la cola</string>
    <string name="reproducirSiguiente">Reproducir siguiente</string>
    <string name="anadirAFavoritos">Añadir a favoritos</string>
    <string name="eliminarDeLaPlaylist">Eliminar de la playlist</string>
    <string name="eliminarDeFavoritos">Eliminar de favoritos</string>
    <string name="opciones">Opciones</string>
    <string name="historialDeBusqueda">Historial de búsqueda</string>
    <string name="eliminarHistorial">Eliminar historial</string>
    <string name="elementoCampoBuscar">nombreCampoBuscar</string>
    <string name="noHayHistorial">No hay historial</string>
    <string name="descIconoFlechaAbajo">Icono de una flecha hacia abajo. Hecho a partir de Icono flecha izquierda</string>
    <string name="descImagenCancion">Imagen de la canción</string>
    <string name="descIconoBucle"><![CDATA[Icono de bucle, hecho a partir de: https://www.flaticon.com/free-icon/loop_1248850?term=loop&page=2&position=60&page=2&position=60&related_id=1248850&origin=search]]></string>
    <string name="descIconoAleatorio"><![CDATA[Icono aleatorio, hecho a partir de: https://www.flaticon.com/free-icon/random_1159745?term=random&page=1&position=14&page=1&position=14&related_id=1159745&origin=search]]></string>
    <string name="descIconoPlayPausaActivity"><![CDATA[Icono de play pausa, hecho a partir de: https://www.flaticon.com/free-icon/pause_659916?term=pause&page=1&position=29&page=1&position=29&related_id=659916&origin=search y de https://www.flaticon.com/free-icon/play_727245?term=play&page=1&position=10&page=1&position=10&related_id=727245&origin=search]]></string>
    <string name="tiempoPorDefecto">00:00</string>
    <string name="noRepetir">No repetir</string>
    <string name="repetirEnBucle">Repetir en bucle</string>
    <string name="modoAleatorio">Modo Aleatorio</string>
    <string name="eliminarCola">Eliminar cola</string>
    <string name="guardarCola">Guardar cola</string>
    <string name="descIconoGuardar"><![CDATA[Icono de guardar, hecho por: https://www.flaticon.com/free-icon/download_3580085?term=save&page=1&position=3&page=1&position=3&related_id=3580085&origin=search]]></string>
    <string name="cerrar">Cerrar</string>
    <string name="restablecerAplicacion">Restablecer aplicación</string>
    <string name="subtituloRestablecerAplicacion">Restablecer todos los datos de la aplicación a sus valores de fábrica</string>
    <string name="mensajeDialogRestablecerAplicacion">¿Desea restablecer todos los datos de la aplicación a sus valores de fábrica?</string>
    <string name="mensajeEliminarPlaylist">¿Deseas eliminar la playlist?</string>
</resources>