<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorFondoApp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgAlbumFragment"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/imagen_playlist"
        app:layout_constraintBottom_toTopOf="@+id/seekbarFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekbarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:indeterminate="false"
        android:progressDrawable="@drawable/seekbar"
        android:splitTrack="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnMostrarColaFragment"
        style="@style/botonesFragment"
        android:contentDescription="@string/descIconoCola"
        android:src="?attr/iconoCola"
        app:layout_constraintBottom_toTopOf="@+id/seekbarFragment"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btnSiguienteCancionFragment"
        style="@style/botonesFragment"
        android:contentDescription="@string/descIconoCancionSiguiente"
        android:src="?attr/iconoSiguienteCancionFragment"
        app:layout_constraintBottom_toTopOf="@+id/seekbarFragment"
        app:layout_constraintEnd_toStartOf="@+id/btnMostrarColaFragment" />

    <ImageView
        android:id="@+id/btnPlayPausaFragment"
        style="@style/botonesFragment"
        android:contentDescription="@string/descIconoPlayPauseFragment"
        android:src="?attr/iconoPlayFragment"
        app:layout_constraintBottom_toTopOf="@+id/seekbarFragment"
        app:layout_constraintEnd_toStartOf="@+id/btnSiguienteCancionFragment" />

    <ImageView
        android:id="@+id/btnCancionAnteriorFragment"
        style="@style/botonesFragment"
        android:contentDescription="@string/descIconoCancionAnteriorFragment"
        android:src="?attr/iconoCancionAnteriorFragment"
        app:layout_constraintBottom_toTopOf="@+id/seekbarFragment"
        app:layout_constraintEnd_toStartOf="@+id/btnPlayPausaFragment" />

    <TextView
        style="@style/subtituloFragment"
        android:text="@string/album_desconocido"
        app:layout_constraintBottom_toTopOf="@id/seekbarFragment"
        app:layout_constraintEnd_toStartOf="@+id/btnCancionAnteriorFragment"
        app:layout_constraintStart_toEndOf="@+id/imgAlbumFragment" />

    <TextView
        android:id="@+id/lblNombreCancionFragment"
        style="@style/tituloFragment"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgAlbumFragment"
        app:layout_constraintTop_toTopOf="@id/imgAlbumFragment" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorSeparador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>