<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorFondoApp"
    android:paddingTop="24dp"
    tools:context=".vista.activities.BuscarActivity">

    <ImageView
        android:id="@+id/btnAtrasBuscar"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/descIconoFlechaIzquierda"
        android:src="?attr/iconoFlechaIzquierda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBuscarCancion"
        style="@style/campoTexto"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="text"
        android:transitionName="@string/elementoCampoBuscar"
        app:layout_constraintBottom_toBottomOf="@+id/btnAtrasBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAtrasBuscar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblHistorial"
        style="@style/tituloActivity"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/historialDeBusqueda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAtrasBuscar" />

    <LinearLayout
        android:id="@+id/btnEliminarHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/lblHistorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/lblHistorial">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/descIconoEliminar"
            android:src="?attr/iconoEliminar" />

        <TextView
            style="@style/nombreIcono"
            android:text="@string/eliminarHistorial"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        style="@style/subtituloRecyclerView"
        android:gravity="center_horizontal"
        android:text="@string/noHayHistorial"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewHistorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewHistorial" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHistorial"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="?attr/colorFondoApp"
        android:overScrollMode="never"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHistorial" />

    <in.myinnos.alphabetsindexfastscrollrecycler.IndexFastScrollRecyclerView
        android:id="@+id/recyclerViewBuscarCanciones"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewHistorial" />

</androidx.constraintlayout.widget.ConstraintLayout>